--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,18 @@
 @import './base.css';
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(206, 199, 191); /* Set background color for the body */
+  margin: 0; /* Remove default body margin */
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem; /* Add padding to create space around the content */
   font-weight: normal;
-  background-color:rgb(206 199 191);
 }
 
 a,
@@ -16,15 +23,21 @@ a,
   padding: 3px;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+/* Styles for mobile devices */
+@media (max-width: 767px) {
+  #app {
+    padding: 1rem; /* Adjust padding for smaller screens */
+  }
+}
+
+@media (min-width: 767px) {
+  #app {
+    padding: 1rem; /* Adjust padding for smaller screens */
   }
 }
 
 @media (min-width: 1024px) {
   body {
-    background-color:rgb(206 199 191);
     display: flex;
     place-items: center;
   }
@@ -34,6 +47,5 @@ a,
     width: 50%;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-    background-color:rgb(206 199 191);
   }
 }
