--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,25 +62,133 @@ body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
+  transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.wrapper {
+  display: flex;
+  flex-grow: 1;
+  flex: auto;
+}
+.pf {
+  margin: 20px;
+  width: 50%;
+  border-radius: 50%;
+}
+img {
+  width: 30px;
+}
+.logo {
+  width: 50px;
+  height: 3rem;
+  border-style: solid;
+  border-radius: 30px;
+  padding: 5px;
+}
+.logoStudied {
+  width: 50px;
+  height: 3rem;
+  border-style: solid;
+  border-radius: 30px;
+  margin: 10px 5px;
+  padding: 10px;
+}
+.mainContainer {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(206 199 191);
+}
+.containerOne {
+  margin: 20px;
+  width: 40%;
+  height: 550px;
+  background-color: rgb(96, 111, 111);
+  border-radius: 20px;
+}
+.containerTwo {
+  margin: 2px;
+  width: 60%;
+  background-color: rgb(206 199 191);
+  border-radius: 20px;
+}
+.link {
+  padding: 10px;
+  margin: 20px;
+  height: 3rem;
+  text-decoration: none;
+  color: lightgray;
+}
+a {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 3rem;
+  text-decoration: none;
+  color: hwb(0 83% 17%);
+}
+p {
+  text-align: justify;
+  padding: 10px;
+  font-size: 15px;
+  font-weight: 700;
+  color: rgb(96, 111, 111);
+}
+.footer {
+  font-size: 15;
+  font-style: oblique;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px;
+}
+.socialLink {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+.profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h4 {
+  text-align: center;
+  padding: 2px;
+  font-weight: 300;
+  color: rgb(195, 205, 185);
+}
+h3 {
+  text-align: center;
+  color: rgb(171, 199, 222);
+  padding: 2px;
+  font-weight: 00;
+}
+h2 {
+  font-size: 12px;
+  border-radius: 50px;
+  color: rgb(171, 199, 222);
+}
+h1 {
+  margin: 10px 5px;
+  display: flex;
+  justify-content: center;
+  color: rgb(96, 111, 111);
+  padding: 10px;
+  font-weight: 500;
+  font-size: 20px;
+}
+.studied {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
